--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <p>introspect</p>
-        <div class="menu">
+        <div class="header__menu">
             <a href="http://">HOME</a>
             <a href="http://">GENERIC</a>
             <a href="http://">ELEMENTS</a>
