--- a/index.html
+++ b/index.html
@@ -3,84 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tutor Sapiens</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> <!--Versión 6-->
 </head>
 <body>
     <header>
-        <p>introspect</p>
+        <p>Tutor Sapiens</p>
         <div class="header__menu">
-            <a href="http://">HOME</a>
-            <a href="http://">GENERIC</a>
-            <a href="http://">ELEMENTS</a>
+            <a href="index.html">Inicio</a>
+            <a href="#first-post">Sobre nosotros</a>
+            <a href="#formulario">Contacto</a>
         </div>
     </header>
     <main>
         <section class="main__title">
-            <h2>INTROSPECT: A FREE + FULLY RESPONSIVE SITE TEMPLATE BY TEMPLATED</h2>
-            <button class="button__white"><a href="http://">GET STARTED</a></button>
+            <h2>Despertando el conocimiento: tu inicio en Tutor Sapiens</h2>
+            <button class="button__white"><a href="index.html">Empecemos</a></button>
         </section>
         <section class="main__first__post">
-            <h2>MAGNA ETIAM LOREM</h2>
-            <p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
-            <button class="button__learn"><a href="http://">LEARN MORE</a></button>
+            <h2>Los cimientos del saber: tu primera inmersión</h2>
+            <p>En Tutor Sapiens, estamos comprometidos con tu viaje de aprendizaje. Nuestra misión es proporcionarte recursos educativos y tutoriales que inspiren el conocimiento y fortalezcan tus habilidades.</p>
+            <p>Desde lecciones paso a paso hasta consejos prácticos, aquí encontrarás un universo de aprendizaje diseñado para fomentar el crecimiento personal y profesional.</p>
+            <button class="button__learn"><a href="index.html">Leer más</a></button>
         </section>
         <section class="main__galeria">
             <article>
-                <h2>PELLENTESQUE ADIPIS</h2>
-                <img src="images/pic01.jpg" alt="">
-                <p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+                <h2>Domina tu tiempo: estrategias de estudio eficientes</h2>
+                <figure>
+                    <img src="images/pic01.jpg" alt="">
+                </figure>
+                <p>Descubre cómo maximizar tu tiempo de estudio con técnicas probadas que transformarán tu enfoque y rendimiento académico. ¡Prepárate para dominar cada sesión de estudio y alcanzar tus metas educativas!</p>
             </article>
             <article>
-                <h2>MORBI INTERDUM MOL</h2>
-                <img src="images/pic02.jpg" alt="">
-                <p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+                <h2>Escribe con fluidez: secretos para mejorar tu velocidad y precisión</h2>
+                <figure>
+                    <img src="images/pic02.jpg" alt="">
+                </figure>
+                <p>Sumérgete en el arte de la mecanografía con consejos prácticos y ejercicios diseñados para perfeccionar tu habilidad de escritura. Desde técnicas de posición de manos hasta ejercicios divertidos, te guiaremos paso a paso para que puedas escribir con fluidez y confianza. ¡Prepárate para desbloquear todo tu potencial mecanográfico y destacar en la era digital!</p>
             </article>
         </section>
         <section class="main__posts">
             <article>
                 <i class="fa-solid fa-laptop fa-3x" aria-hidden="true"></i>
-                <h2>TEMPUS FEUGIAT</h2>
-                <p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna lorem ullamcorper laoreet, lectus arcu.</p>
-                <button class="button__learn"><a href="http://">LEARN MORE</a></button>
+                <h2>Aprendizaje personalizado</h2>
+                <p>Tu educación, a tu manera. Ofrecemos lecciones adaptadas a tu estilo de aprendizaje único, proporcionándote una experiencia educativa personalizada.</p>
+                <button class="button__learn"><a href="index.html">Leer más</a></button>
             </article>
             <article>
                 <i class="fas fa-gem fa-3x" aria-hidden="true"></i>
-                <h2>ALIQUAM NULLA</h2>
-                <p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed.</p>
-                <button class="button__learn"><a href="http://">LEARN MORE</a></button>
+                <h2>Practicidad en acción</h2>
+                <p>Simplificamos el aprendizaje con tutoriales prácticos y ejercicios aplicables, asegurándote que cada recurso sea fácil de entender y de implementar.</p>
+                <button class="button__learn"><a href="index.html">Leer más</a></button>
             </article>
             <article>
                 <i class="fa-solid fa-laptop fa-3x" aria-hidden="true"></i>
-                <h2>SED MAGNA</h2>
-                <p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula.</p>
-                <button class="button__learn"><a href="http://">LEARN MORE</a></button>
+                <h2>Comunidad de aprendizaje</h2>
+                <p>Únete a nuestra comunidad educativa, donde encontrarás no solo recursos valiosos, sino también un lugar para compartir experiencias y recibir apoyo. ¡Descubre el poder de aprender juntos!</p>
+                <button class="button__learn"><a href="index.html">Leer más</a></button>
             </article>
         </section>
         <section class="main__formulario">
-            <h2>GET IN TOUCH</h2>
+            <h2>Contacto</h2>
             <form action="">
                 <ul>
                     <div class="main__formulario__data">
                         <div>
-                            <li><label for="name">NAME</label></li>
+                            <li><label for="name">Nombre</label></li>
                             <li><input type="text" name="name" id="name"></li>
                         </div>
                         <div>
-                            <li><label for="email">EMAIL</label></li>
+                            <li><label for="email">Email</label></li>
                             <li><input type="email" name="email" id="email"></li>
                         </div>
                     </div>
-                    <li><label for="message">MESSAGE</label></li>
+                    <li><label for="message">Comentario</label></li>
                     <li><textarea name="message" id="message" cols="30" rows="10"></textarea></li>
                 </ul>
-                <button class="button__white" type="submit"><a href="http://">SEND MESSAGE</a></button>
+                <button class="button__white" type="submit"><a href="index.html">Mandar mensaje</a></button>
             </form>
         </section>
     </main>
     <footer>
-        <p>Powered by <a href="http://">Marina Madrid García</a>.</p>
+        <p>Realizado por: <a href="https://github.com/MarinaMadrid">Marina Madrid García</a>.</p>
     </footer>
 </body>
 </html>
